# discord.py-ext-prometheus

./: .pylintrc  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: build.yml  main.yml  publish.yml
discord/ext/prometheus/: __init__.py  prometheus_cog.py  prometheus_logging_handler.py
grafana/: dashboard.json
src/: main.py
src/discord/ext/prometheus/: __init__.py
tests/: test.py  test_cog.py  test_logging.py
